--- a/shiny-deploy.yaml
+++ b/shiny-deploy.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
-kind: Pod
+kind: pod
 metadata:
   name: shiny-deploy-pod
 spec:
   restartPolicy: Never
   containers:
     - name: shiny-deploy
+      image: aidan2b/adr-detection:test
       command: ["/bin/sh", "-c"]
       env:
         - name: SHINYAPPS_TOKEN
