add server.R and ui.R

--- a/shiny-deploy.yaml
+++ b/shiny-deploy.yaml
@@ -21,6 +21,9 @@ spec:
               key: SHINYAPPS_SECRET
       args:
         - |
+
+          cp -r /shiny_app/server.R /data/server.R
+          cp -r /shiny_app/ui.R /data/ui.R
           # Deploy to shinyapps.io
           export PATH=$PATH:/usr/bin/R
           R -e "rsconnect::setAccountInfo(name = 'aidan2b', token = Sys.getenv('SHINYAPPS_TOKEN'), secret = Sys.getenv('SHINYAPPS_SECRET'))"
