--- a/shiny-deploy.yaml
+++ b/shiny-deploy.yaml
@@ -7,6 +7,7 @@ spec:
   containers:
     - name: shiny-deploy
       image: aidan2b/adr-detection:test
+      imagePullPolicy: Always
       command: ["/bin/sh", "-c"]
       env:
         - name: SHINYAPPS_TOKEN
