added new meds, removed temp column names

--- a/medicrawl-config.yaml
+++ b/medicrawl-config.yaml
@@ -4,8 +4,11 @@ metadata:
   name: medicrawl-config
 data:
   medications: |
-    prozac
-    wellbutrin
-    lexapro
     zoloft
-    propranolol
+    tylenol
+    lisinopril
+    celexa
+    lipitor
+    xanax
+
+    
