cleaned up workflow titles and removed useless yml

--- a/medicrawl-config.yaml
+++ b/medicrawl-config.yaml
@@ -4,6 +4,10 @@ metadata:
   name: medicrawl-config
 data:
   medications: |
+    prozac
+    lexapro
+    propranolol
+    wellbutrin
     zoloft
     tylenol
     lisinopril
