--- a/shiny-deploy.yaml
+++ b/shiny-deploy.yaml
@@ -28,6 +28,7 @@ spec:
 
           # Deploy to shinyapps.io
           export PATH=$PATH:/usr/bin/R
+          R -e "install.packages('rsconnect', repos = 'https://cran.rstudio.com/')"
           R -e "rsconnect::setAccountInfo(name = 'aidan2b', token = Sys.getenv('SHINYAPPS_TOKEN'), secret = Sys.getenv('SHINYAPPS_SECRET'))"
           R -e "rsconnect::deployApp(appDir = 'data/', appName = 'adr-detection', account = 'aidan2b')"
       resources:
