--- a/shiny-deploy.yaml
+++ b/shiny-deploy.yaml
@@ -22,15 +22,15 @@ spec:
               key: SHINYAPPS_SECRET
       args:
         - |
-
           cp -r /shiny_app/server.R /data/server.R
           cp -r /shiny_app/ui.R /data/ui.R
 
           # Deploy to shinyapps.io
           export PATH=$PATH:/usr/bin/R
-          R -e "install.packages('rsconnect', repos = 'https://cran.rstudio.com/')"
+          R -e "install.packages(c('rsconnect', 'RcppTOML', 'crosstalk', 'here', 'lazyeval', 'plotly', 'png', 'reticulate'), repos = 'https://cran.rstudio.com/')"
           R -e "rsconnect::setAccountInfo(name = 'aidan2b', token = Sys.getenv('SHINYAPPS_TOKEN'), secret = Sys.getenv('SHINYAPPS_SECRET'))"
           R -e "rsconnect::deployApp(appDir = 'data/', appName = 'adr-detection', account = 'aidan2b')"
+
       resources:
         limits:
           memory: 12Gi
