moved files around, edited dockerfile

--- a/medicrawl-config.yaml
+++ b/medicrawl-config.yaml
@@ -4,11 +4,10 @@ metadata:
   name: medicrawl-config
 data:
   medications: |
-    cymbalta 
-    effexor 
-    metformin 
-    plavix
-    seroquel
+    wellbutrin
+
+
+    
     
 
     
